static/styles/page.css
main {
  font-family: Roboto, sans-serif;
}

a {
  text-decoration: none;
  color: hsla(47, 39%, 34%, 1);
}

p,
ul {
  font-size: 18px;
  font-weight: 300;
  line-height: 1.5;
}

div[data-testid='content'] {
  max-width: 90%;
  margin: 0 auto;
}

@media screen and (min-width: 600px) {
  div[data-testid='content'] {
    max-width: 70%;
  }
}

name {
  font-size: 30px;
  margin-bottom: 8px;
}

phone {
  margin-top: 8px;
}

centercolumndetails {
  margin-top: 24px;
  margin-bottom: -8px;
}

rightcolumndetails {
  margin-top: 24px;
}

heading {
  font-size: 22px;
  font-weight: 400;
}

li h6 {
  font-size: 20px;
  font-weight: 400;
  margin-top: 24px;
  margin-bottom: -12px;
}

h2 {
  font-size: 28px;
  font-weight: 500;
}

tabs {
  margin-bottom: 24px;
  display: block;
}

tabs > h2 {
  font-size: 24px;
  font-weight: 400;
}

left > h2.title,
right > h2.title {
  font-size: 18px;
  font-weight: 300;
}

br {
  display: none;
}

/* listviewimage, detailstype, rightcolumnblogs, br {
  display: none;
} */

name,
phone,
email,
cvlink,
videoembed,
centercolumndetails,
rightcolumndetails {
  display: block;
}

h5 {
  font-size: 18px;
  font-weight: 400;
}

h6 {
  font-size: 20px;
  font-weight: 400;
  margin-bottom: 0;
}

